fix(header): increase z-index for header component

--- a/app/components/header/header.module.scss
+++ b/app/components/header/header.module.scss
@@ -21,7 +21,7 @@
   width: 100%;
   padding-block: var(--mantine-spacing-sm);
   background-color: white;
-  z-index: 10;
+  z-index: 100;
 
   .title {
     text-transform: uppercase;
